--- a/app/styles/index.module.scss
+++ b/app/styles/index.module.scss
@@ -21,12 +21,9 @@
 .contents {
   position: absolute;
   bottom: 20px;
-  width: 20vw;
-  .button_wrapper {
+  width: 300px;
+  .button {
     text-align: center;
-    .button {
-      display: inline-block;
-    }
   }
   .form {
     margin-bottom: 30px;
