--- a/app/styles/index.module.scss
+++ b/app/styles/index.module.scss
@@ -1,36 +1,8 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-}
-
-.title {
-  font-size: 80px;
-  position: absolute;
-  top: 200px;
-}
-
-.contents {
-  position: absolute;
-  bottom: 20px;
+.contents{
   width: 300px;
-  .button {
+  margin: 100px auto;
+  .button{
     text-align: center;
-  }
-  .form {
-    margin-bottom: 30px;
-
-    .radio {
-      text-align: center;
-      margin: 10px;
-    }
+    margin-top: 20px;
   }
 }
